--- a/Config/main.config
+++ b/Config/main.config
@@ -9,5 +9,5 @@ UI.Config.Clock=True
 UI.Config.Greet=False
 UI.Config.QUISkin=False
 UI.Config.Transparency=220
-UI.Config.useBackPicture=False
-UI.Config.AppBackPicturePath=
+UI.Config.useBackPicture=True
+UI.Config.AppBackPicturePath=I:\_Media\WallPapers\QCube\0c898723125ada049d9bf031de894324.jpg
